src/test/java/com/aspose/cloud/diagram/api/StorageApiTests.java
/*
 * Aspose.Diagram Cloud API Reference
 * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
 *
 * OpenAPI spec version: 3.0
 * 
 *
 * NOTE: This class is auto generated by the swagger code generator program.
 * https://github.com/swagger-api/swagger-codegen.git
 * Do not edit the class manually.
 */

package com.aspose.cloud.diagram.api;

import java.io.File;

import org.junit.Test;

import com.aspose.cloud.diagram.client.ApiException;

/**
 * API tests for StorageApi
 */
public class StorageApiTests extends TestBase {

	private StorageApi storageApi = GetStorageApi();

	public StorageApiTests() throws ApiException {
		super();
		// TODO Auto-generated constructor stub
	}

	@Test
	public void StorageTest() throws ApiException {
		String name = "Source.vsd";
		String folder = "NewFolder";
		storageApi.createFolder(folder, null);
		File file = new File(GetSourceFolder() + name);
		storageApi.uploadFile(folder + "\\" + name, file, null);
		storageApi.copyFile(folder + "\\" + name, folder + "\\1" + name, null, null, null); // error
		storageApi.copyFolder(folder, folder + "1", null, null);
		storageApi.moveFolder(folder + "1", folder + "2", null, null);
		storageApi.deleteFolder(folder + "2", null, true);
		storageApi.deleteFile(folder + "\\" + name, null, null);
	}

}
